Bug 142368 - Hint from AutoInput in formula bar stays on top after switching to another application
Summary: Hint from AutoInput in formula bar stays on top after switching to another ap...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-weld-InputBar
  Show dependency treegraph
 
Reported: 2021-05-19 06:43 UTC by Mike Kaganski
Modified: 2022-06-10 05:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast of problematic hint behavior (420.61 KB, image/gif)
2021-05-19 06:43 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2021-05-19 06:43:05 UTC
Created attachment 172164 [details]
Screencast of problematic hint behavior

In Calc, start typing a formula in Formula bar, and have a hint from AutoInput to appear. At this point, switch to another application. The hint does not disappear, but stays on top of the active window; click on it brings Calc back to front.

Tested with Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: en-US (ru_RU); UI: en-US
Calc: threaded.
Comment 1 Eric 2021-06-04 08:58:19 UTC
In openSuse 15.2 I also see something similar where if Calc is in the background behind another window the tool tips will popup over the active window. It seems to happen randomly. Its been going on for a long time over multiple versions, but it was never annoying enough to report it. I just got in the habit of leaving Calc closed until i needed it (not a solution). In my case mousing over the tool tip would make it disappear. I never tried clicking on it.
Currently i have LibreOffice 7.1.1.2 10(Build:2) and KDE 5.71.0 Plasma 5.18.6
Comment 2 Buovjaga 2022-04-27 12:26:54 UTC
Mike: I'm not seeing this in

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3a05acb8f0d94728ea6cbfd7a69dac6ffa7ffc68
CPU threads: 2; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded Jumbo

(In reply to Eric from comment #1)
> In openSuse 15.2 I also see something similar where if Calc is in the
> background behind another window the tool tips will popup over the active
> window. It seems to happen randomly. Its been going on for a long time over
> multiple versions, but it was never annoying enough to report it. I just got
> in the habit of leaving Calc closed until i needed it (not a solution). In
> my case mousing over the tool tip would make it disappear. I never tried
> clicking on it.
> Currently i have LibreOffice 7.1.1.2 10(Build:2) and KDE 5.71.0 Plasma 5.18.6

This might be an issue that was fixed like a week ago.
Comment 3 Buovjaga 2022-04-27 12:30:04 UTC
Sorry, I made a mistake and Áron corrected me just now. I see the problem when using the formula bar.
Comment 4 Aron Budea 2022-04-27 14:35:53 UTC
Can be reproduced using VCL plugin gen as well. It's also a regression starting from the following commit, bibisected using repo bibisect-win64-7.1. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e087e25f05e689091cbf1c4f91b6e93878ac17ec
author		Caolán McNamara <caolanm@redhat.com>	2020-10-05 14:19:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-10-16 12:54:14 +0200

weld InputBar
Comment 5 Commit Notification 2022-06-09 13:07:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4308db47d950d6c1038968d22a9a9c453619eb4b

Resolves: tdf#142368 drop popover on ControlLoseFocus

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2022-06-09 13:08:38 UTC
done in trunk, backport to 7-3 in gerrit
Comment 7 Commit Notification 2022-06-10 05:23:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/65738d67321bbe2aedd67edd5a43b3f3ed7bf960

Resolves: tdf#142368 drop popover on ControlLoseFocus

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.