Resolves: tdf#142368 drop popover on ControlLoseFocus

which is what appears when the Control derived inputbar loses focus
while the main window losing focus gives WindowLoseFocus

Change-Id: Iae9a2874c3dd513a1a092a18846858f819542370
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135534
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>